--- a/Website/CSS/MainStyleSheet.css
+++ b/Website/CSS/MainStyleSheet.css
@@ -185,10 +185,18 @@ input[type=button]:hover{
   padding-top: 10px;
 }
 
+.content {
+  min-height: 100%;
+  margin: 0 auto 10%;
+}
+
+html, body {
+  height: 80%;
+  margin: 0;
+}
+
 .footer{
-  width: 100%;
-  font-weight: bold;
-  text-align: right;
-  background-color: #101010;
+  height: 15%;
+  text-align: center;
   float:left;
 }
