--- a/Website/CSS/MainStyleSheet.css
+++ b/Website/CSS/MainStyleSheet.css
@@ -157,10 +157,30 @@ input[type=button]:hover{
   align-self: center;
   text-align: left;
   vertical-align: middle;
-  font-weight: bolder;
   padding-left: 10%;
   padding-right: 10%;
   float:left;
+}
+
+.mainTextAlt devLog{
+  width: 100%;
+  align-self: center;
+  text-align: left;
+  vertical-align: middle;
+  display: table;
+  border-style: solid;
+  border-width: 0px;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  border-color: #404040;
+}
+
+span{
+  vertical-align: middle;
+  display: table-cell;
+  padding-right: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .leftMenu{
