--- a/FullBeans/CSS/MainStyleSheet.css
+++ b/FullBeans/CSS/MainStyleSheet.css
@@ -34,7 +34,7 @@ input[type=button]:hover{
 
 .negativeSpace{
   height: 12.5%;
-  background-color: ffffff;
+  background-color: #0A0A0A;
 }
 
 .areaSplit{
