--- a/Website/CSS/MainStyleSheet.css
+++ b/Website/CSS/MainStyleSheet.css
@@ -92,7 +92,9 @@ input[type=button]:hover{
 .menu li a:hover{
   background-color: #404040;
   color: #FFFFFF;
-  border: 3px;
+  border-left: 3px;
+  border-right: 3px;
+  border-top: 0px;
   border-style: solid;
   border-color: #101010;
 }
@@ -116,6 +118,10 @@ input[type=button]:hover{
   padding: 5px, 0px, 0px, 5px;
   width: 100%;
   overflow: auto;
+}
+
+.menu li ul li a{
+  width: 200px;
 }
 
 .mainText{
