--- a/HMS Bennett/Tali/CSS/coursework.css
+++ b/HMS Bennett/Tali/CSS/coursework.css
@@ -4,17 +4,16 @@ body{
   color: white;
 }
 
-.title{
-  display: table-row;
+.titleName{
+  text-align: left;
 }
 
-.cart{
-  display: table-row;
+.titleCart{
+  text-align: right;
 }
 
-
-.menu, li{
-  display: inline;
+.menu td{
+  display: block;
   float: left;
   position: relative;
   margin: 0px;
@@ -22,7 +21,7 @@ body{
   font-size: 15px;
 }
 
-.menu li a{
+.menu td a{
   display: block;
   float: left;
   padding-left: 20px;
@@ -32,10 +31,34 @@ body{
   border-style: solid;
   border-color: white;
   color: white;
+  text-decoration: none;
 }
 
-.menu li a:hover{
+.menu td a:hover{
   border-color: grey;
   background-color: white;
   color: grey;
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+a:hover{
+  color: black;
+}
+
+.content{
+  margin-top: 2.5%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.content td{
+  text-align: center;
+  border-radius: 2.5px;
+  border-style: ridge;
+  width: 33.333%;
+  font-size: 15px;
 }
