All data comes from the server now

--- a/HMS Bennett/Tali/CSS/coursework.css
+++ b/HMS Bennett/Tali/CSS/coursework.css
@@ -99,3 +99,19 @@ button:hover{
   font-size: 25px;
   color: black;
 }
+
+.request{
+  width: 80%;
+  text-align: center;
+  margin-left: 10%;
+  margin-top: 2.5%;
+  font-size: 25px;
+}
+
+.request input{
+  width: 50%;
+  float: right;
+  margin-right: 18%;
+  margin-left: -18%;
+  font-size: 20px;
+}
