--- a/HMS Bennett/Tali/CSS/coursework.css
+++ b/HMS Bennett/Tali/CSS/coursework.css
@@ -96,8 +96,17 @@ button{
 
 button:hover{
   background-color: white;
-  font-size: 25px;
   color: black;
+}
+
+button:hover:disabled{
+  background-color: white;
+  color: grey;
+}
+
+button:disabled{
+  background-color: white;
+  color: grey;
 }
 
 .request{
